# CAPS

./: .gitignore  PHASE2_SETUP.md  Readme.md  SETUP.md  pyproject.toml  verify_system_integrity.py
frontend/src/api/: client.ts
frontend/src/app/: App.tsx
scripts/: list_models.py  run_context_service.py  test_context_api.py  test_model.py
src/caps/: __init__.py  main.py  server.py
src/caps/agent/: __init__.py  intent_interpreter.py
src/caps/context/: __init__.py  config.py  context_client.py  context_service.py  mock_data.py  models.py
src/caps/execution/: __init__.py  engine.py  models.py  router.py
src/caps/intelligence/: __init__.py  aggregator.py  models.py
src/caps/ledger/: __init__.py  ledger.py  models.py
src/caps/memory/: __init__.py  models.py  session.py
src/caps/policy/: __init__.py  engine.py  models.py
src/caps/policy/rules/: __init__.py  behavioral.py  hard_invariants.py  threat_defense.py  velocity.py
src/caps/rag/: __init__.py  models.py  retriever.py  vector_store.py
src/caps/schema/: __init__.py  intent_schema.py  validator.py
src/caps/security/: consent.py
tests/: test_consent.py  test_context_integration.py  test_context_service.py  test_execution_engine.py  test_intent_interpreter.py  test_phase5.py  test_policy_engine.py  test_rag.py  test_schema_validation.py  test_structured_logging.py
